# SAMP_PluginExample

./: .gitmodules  CMakeLists.txt  pawn.json  simpletranslator.def  simpletranslator.inc  simpletranslator.rc
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
